tdf#91219 sw: don't allow anchoring a shape+textbox into itself

We already have code that detects this in the simple fly frame case,
extend that to cover the "paired fly frame + draw shape" case as well.

Change-Id: I4b3c1d600407436b239fee311ae6bfe837804241
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89381
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>